# CharacterEngine

./: .gitignore  CMakeLists.txt  README.md  generate_build.sh  generate_dev_env.sh
src/Characters/mamizou/: CMakeLists.txt  Mamizou.cpp  Mamizou.hpp  MamizouObjectFactory.cpp  MamizouObjectFactory.hpp  character.json  entry_point.cpp  version.rc
src/Characters/mamizou/data/character/: convertPalette.py
src/Characters/mamizou/data/character/alice/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/aya/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/chirno/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/clownpiece/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/flandre/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/iku/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/kaguya/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/komachi/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/mamizou/: diff.patch  mamizou.xml  mamizou_labels.json  palette-02.pal  palette-04.pal  palette-06.pal  palette-07.pal  palette000.pal  palette001.pal  palette002.pal  palette003.pal  palette004.pal  palette005.pal  palette006.pal  palette007.pal  palette008.pal  palette009.pal  palette010.pal  palette011.pal  palette012.pal  palette013.pal  palette014.pal  palette015.pal  palette016.pal  palette017.pal
src/Characters/mamizou/data/character/marisa/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/meirin/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/mima/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/mokou/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/momiji/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/murasa/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/orin/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/patchouli/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  palette-07.pal  palette-08.pal
src/Characters/mamizou/data/character/ran/: palette-01.pal  palette-02.pal  palette-03.pal  palette-04.pal  palette-05.pal  palette-06.pal  (+2 more)
src/Characters/mamizou/gage/: generate_green_gage.py  generate_rainbow_gage.py  generate_red_gage.py
src/Characters/mamizou/objects/: BirdShadow.cpp  BirdShadow.hpp  BucketYoukai.cpp  BucketYoukai.hpp  CrabYoukai.cpp  CrabYoukai.hpp  DemonGate.cpp  DemonGate.hpp  DemonsGate.cpp  DemonsGate.hpp  FrogShadow.cpp  FrogShadow.hpp  HotPot.cpp  HotPot.hpp  LanternYoukai.cpp  LanternYoukai.hpp  LeafSpawner.cpp  LeafSpawner.hpp  RegularSmoke.cpp  RegularSmoke.hpp  Smoke.cpp  Smoke.hpp  SmokeBullet.cpp  SmokeBullet.hpp  UdongeClone.cpp  UdongeClone.hpp  Umbrella2C.cpp  Umbrella2C.hpp  Umbrella5C.cpp  Umbrella5C.hpp  WallYoukai.cpp  WallYoukai.hpp  YoukaiShadow.cpp  YoukaiShadow.hpp  YoukaiShadow2.cpp  YoukaiShadow2.hpp  YoumuClone.cpp  YoumuClone.hpp
src/Characters/mamizou/objects/Gui/: CardSelect.cpp  CardSelect.hpp  StackGui.cpp  StackGui.hpp  TimerDebuffGui.cpp  TimerDebuffGui.hpp  TimerGui.cpp  TimerGui.hpp  TimerSpellGui.cpp  TimerSpellGui.hpp
src/Characters/ran/: CMakeLists.txt  Ran.cpp  Ran.hpp  character.json  code_patches.cpp  code_patches.hpp  entry_point.cpp  version.rc
src/Characters/tewi/: CMakeLists.txt  Tewi.cpp  Tewi.hpp  TewiObjectFactory.cpp  character.json  entry_point.cpp  version.rc
src/Characters/tewi/hammer/: generate_torque.py  palette.py
src/Characters/tewi/objects/: Bamboo.cpp  Bamboo.hpp  Bottle.cpp  FIWBAfterImage.cpp  FIWBAfterImage.hpp  Hammer.cpp  IllusionRabbit.cpp  KillingRabbit.cpp  Rabbit.cpp  Rabbit.hpp  RabbitOrb.cpp  RabbitOrb.hpp  RabbitSolidarity.cpp  RabbitSolidarity.hpp  SaSOrb.cpp  SaSOrb.hpp  SetAndStrikeOrb.cpp  SpellTrapHole.cpp  SpinningSmoke.cpp  SpinningSmoke.hpp  SubterraneanAnimism.cpp  SubterraneanAnimism.hpp  TaCRabbit.cpp  TrapHole.cpp  TrapHole.hpp  UBRabbit.cpp  UBRabbit.hpp
src/Characters/tewi/objects/UnexpectedAssistanceObject/: Alice.cpp  Aya.cpp  Aya.hpp  Cirno.cpp  Cirno.hpp  Iku.cpp  Iku.hpp  Komachi.cpp  Komachi.hpp  Marisa.cpp  Marisa.hpp  Meiling.cpp  Meiling.hpp  Namazu.cpp  Namazu.hpp  Patchouli.cpp  Patchouli.hpp  Reimu.cpp  Reimu.hpp  Reisen.cpp  Reisen.hpp  Remilia.cpp  Remilia.hpp  Sakuya.cpp  Sakuya.hpp  Sanae.cpp  Sanae.hpp  Suika.cpp  Suika.hpp  Suwako.cpp  Suwako.hpp  Tenshi.cpp  Tenshi.hpp  Utsuho.cpp  Utsuho.hpp  Youmu.cpp  Youmu.hpp  Yukari.cpp  Yukari.hpp  Yuyuko.cpp  (+1 more)
(+421 files in other folders)
